implémentation de la récupération d'une image, ajout du dossier uploads
