# app.js
@@ -11,6 +11,7 @@ let helmet          = require('helmet'); // protection des vulnerabilites
 let indexRouter      =  require('./routes/index');
 let adminRouter      =  require('./routes/admin');
 let simpleuserRouter =  require('./routes/simpleuser');
+let imageDownloadRouter =  require('./routes/imageDownload');
 
 let app = express();
 app.use(helmet());
@@ -23,8 +24,6 @@ mongoose.Promise = global.Promise;
 let db = mongoose.connection;
 db.on('error', console.error.bind(console, 'MongoDB connection error:'));
 
-
-
 app.use(logger('dev'));
 app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
@@ -33,15 +32,8 @@ app.use(cookieParser());
 
 app.use(compression()); //Compress all routes
 
-// avec la mise de "/<nom_du_dossier_public>" comme premier argument (ici '/public'),
-// en tapant directement dans firefox 
-//    http://localhost:3000/public/images/20190121120157_petitchat.jpg
-// on obtient l'image. (à supposer qu'elle existe dans le dossier 'public/images/' bien sur).
-// si on ne mentionne pas ce premier argument , par exemple en mettant ici
-//    app.use( express.static(path.join(__dirname, 'public')));
-// dans ce cas, pour avoir l'image dans firefox, il faudrait virer "/<nom_du_dossier_public>", ici on aurait
-//    http://localhost:3000/images/20190121120157_petitchat.jpg
-app.use('/public', express.static(path.join(__dirname, 'public')));
+app.use(express.static(path.join(__dirname, 'public')));
+app.use('/uploads', imageDownloadRouter);
 
 app.use('/', indexRouter);
 app.use('/admin', adminRouter);
@@ -63,7 +55,6 @@ app.use(function(err, req, res, next) {
   res.status(err.status || 500);
   res.render('error');
 });
-
 
 let port = process.env.PORT || 3000;
 
